# floyd

./: README.md  bin-floyd  pyproject.toml  pyrightconfig.json
ai_pr/: cli.py  git.py  models.py  ui.py  utils.py  workflow.py
floyd/: __init__.py  __main__.py  cli.py  container.py  git.py  ui.py  utils.py
floyd/adapters/inbound/cli/: cli_adapter.py  ui.py
floyd/adapters/outbound/ai/: ai_adapter.py  claude_adapter.py  commit_prompt.txt  copilot_adapter.py  gemini_adapter.py  prompt.txt
floyd/adapters/outbound/config/: toml_config_adapter.py
floyd/adapters/outbound/git/: git_cli_adapter.py
floyd/adapters/outbound/github/: github_cli_adapter.py
floyd/adapters/outbound/utils/: terminal.py
floyd/application/dto/: ai_config.py
floyd/application/ports/inbound/: pr_generation_port.py
floyd/application/ports/outbound/: ai_service_port.py  config_port.py  git_repository_port.py  pr_repository_port.py
floyd/application/services/: pr_generation_service.py
floyd/domain/entities/: git_context.py  pull_request.py
floyd/domain/exceptions/: __init__.py  domain_exception.py
floyd/domain/exceptions/git/: branch_not_found_exception.py  invalid_branch_exception.py
floyd/domain/exceptions/pr/: pr_already_exist_exception.py  pr_generation_exception.py
floyd/domain/value_objects/: branch.py
floyd/dtos/: AIConfigDTO.py  GitContextDTO.py  PullRequestDTO.py  __init__.py
floyd/models/: AIEngine.py
