[project]
name = "floyd-pr-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "setuptools>=80.10.2",
    "rich>=13.0.0",
    "questionary>=2.1.1",
    "pathlib>=1.0.1",
]

[project.scripts]
floyd="floyd.cli:main"
